2009-04-13  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/MiscParsingTestCanvas.xaml: Add a canvas element
	named the_canvas, this name would conflict with the parent
	canvas's name if we weren't in a separate namescope.
	* misc/Parsing/MiscParsing.cs: Make sure that we are picking up
	the correct element when we search in a managed element's
	namescope.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* site/Web.config: Add a Web.config that allows debugging with
	  VS.

2009-04-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Net/WebClientTest.cs: More test case including a test
	for relative URI

2009-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/DnsEndPoint.cs: New. Some unit tests.
	* System.Net/HttpWebRequest.cs: New. Unit tests.
	* System.Net/WebClientTest.cs: New. Some unit tests.
	* System.Net/WebHeaderCollectionTest.cs: New. Unit tests.
	* System.Net/WebRequestTest.cs: New. Unit tests.

2009-04-10  Chris Toshok  <toshok@ximian.com>

	* System.Windows.Media.Animation/StoryboardTest.cs (MultipleStartStop):
	stop the animations after the fifth time.
	(MultipleStartStop2): remove duplicate test.

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Controls/SaveFileDialogTest.cs: New.

2009-04-09  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ScrollViewerTest.cs: Added test to
	  make sure scrollviewer has the right visual tree.

2009-04-09  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: New files added.
	* System.Windows.Automation/WindowVisualStateTest.cs, 
	  System.Windows.Automation/RangeValuePatternIdentifiersTest.cs, 
	  System.Windows.Automation/TogglePatternIdentifiersTest.cs, 
	  System.Windows.Automation/WindowPatternIdentifiersTest.cs,
	  System.Windows.Automation/WindowInteractionStateTest.cs, 
	  System.Windows.Automation/TablePatternIdentifiersTest.cs, 
	  System.Windows.Automation/ValuePatternIdentifiersTest.cs, 