@@ -1,3 +1,8 @@
+2009-04-14  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ListBoxTest.cs: Add more tests on
+	  ListBox
+
 2009-04-13  Jackson Harper  <jackson@ximian.com>
 
 	* misc/Parsing/MiscParsingTestCanvas.xaml: Add a canvas element
